# rusty-open

./: Cargo.toml  README.md
src/: dbg_box.rs  generic_xdg.rs  main.rs  qt_xdg.rs  xdg_desktop_file.rs
