[package]
name = "rusty-open"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rfd.version = "0.15.1"
rfd.default-features = false
rfd.features = ["gtk3"]
thiserror = "2.0.9"
detect-desktop-environment = "1.1.0"

[profile.release]
strip = true
lto = "thin"
panic = "abort"
