[package]
name = "rusty-open"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
thiserror = "2.0.9"
detect-desktop-environment = "1.2.0"
shlex = "1.3.0"
url = "2.5"
egui-sf2g = "0.6.0"
percent-encoding = "2.3"
icon = "0.2.0"
egui_extras.version = "0.33.3"
egui_extras.features = ["image", "file"]
image.version = "*"
image.default-features = false
image.features = ["png"]

[profile.release]
strip = true
lto = "thin"
panic = "abort"
